--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
   },
   "dependencies": {
     "debug": "*",
-    "ffi": "2",
-    "ref": "~1.1.3",
-    "ref-struct": "~1.0.2"
+    "ffi": "*",
+    "ref": "*",
+    "ref-struct": "*"
   },
   "devDependencies": {
-    "libxmljs": "~0.14.3",
-    "dox": "0.3.x",
+    "libxmljs": "*",
+    "dox": "*",
     "memwatch-next": "*",
-    "highlight.js": "1",
-    "jade": "0.25.x",
-    "marked": "0.2.x"
+    "highlight.js": "*",
+    "jade": "*",
+    "marked": "*"
   }
 }
